src/test/ui/parser/issue-19398.stderr
error: missing `fn`, `type`, `const`, or `static` for item declaration
  --> $DIR/issue-19398.rs:1:10
   |
LL |   trait T {
   |  __________^
LL | |
LL | |     extern "Rust" unsafe fn foo();
   | |____^ missing `fn`, `type`, `const`, or `static`

error: aborting due to previous error

